    - fixed setting jump blip when within same collection; while not breaking menu reload upon new collection (monkofthefunk)
    - fixed toggling close the info upon going to settings; fixed toggling back to last from settings in different collection (monkofhefunk)
    - fixed random start playlist to exclude favorites and lastplayed (monkofthefunk)

v0.10.34.2
    - update version *.2 (monkofthefunk)
    - changed pixel format from I420 to NV12 (inigomonyota)
    - fixed bug with marquee and launching lastplayed would play video audio during game (monkofthefunk)
    - fixed collection setting autoPlaylist to go to upon nav (monkofthefunk)
    - fixed to use the default layout.xml and the layout-#.xml if not found in collection layouts (monkofthefunk)
    - added start.bat/sh exit.bat/sh launch on start/exit of retrofe (monkofthefunk)
    - added animated marquee to linux (monkofthefunk)
    - fixed crash on settings reboot (monkofthefunk)
    - added screensaver setting that will quit upon mouse move or button down (monkofthefunk)
    - fixed removal of favorite in favorite playlist, update menu (monkofthefunk)
    - make quit combo and collection cycle faster but cycle button isn't as sensitive (monkofthefunk)
    - move playlist cycle and back button out of idle check (monkofthefunk)
    - fixed back button not updating collection cycle postion (monkofthefunk)
    - fixed not showing splash when screensaver enabled (monkofthefunk)
    - made collection cycle button a bit more responsive (monkofthefunk)
    - fixed collection cycle button and lastKeyPressed logic (monkofthefunk)
    - fixed multi monitor start up crash (monkofthefunk)
    - added random video on start for screensaver (monkofthefunk)
    - fixed select sound making background play sound while game launched (monkofthefunk)
    - added prevCycleCollection button (monkofthefunk)